[project]
name = "sx-check"
dynamic = ["version"]
description = "A sandbox library."
authors = [
    {name = "Stephen Bush", email = "muppetjones@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/muppetjones/sandbox/tree/main/sx-check"
"Bug Tracker" = "https://github.com/muppetjones/sandbox/issues"
"Documentation" = "https://muppetjones.github.io/sandbox/sx-check"


[tool.pdm]
[tool.pdm.dev-dependencies]
ipy = [
    "ipykernel>=6.16.2",
    "jupyterlab>=3.6.1",
]
dev = [
    "pre-commit>=3.0.4",
]
test = [
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "coverage[toml]>=7.2.0",
    "tox>=4.4.6",
]
lint = [
    "flake8>=3.8",
    "black>=20.8b1",
    "ruff>=0.0.287",
]


[tool.pdm.scripts]
init-hooks = "pre-commit install"
rm-hooks = "pre-commit uninstall"
lint = "flake8 sx"
clean = "find . -type f -name '*.py[co]' -delete -o -type d -name __pycache__ -delete"
clean-dry = "find . -type f -name '*.py[co]' -o -type d -name __pycache__ -o -type d -name .pytest_cache"
test = "pytest -vvv"
utest = "python -m unittest discover -vv -t . -s tests.sx_check"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[tool.hatch]
[tool.hatch.build]
exclude = ["tests", "notebooks"]
include = ["sx"]

# NOTE: This doesn't seem reliable
[tool.hatch.version]
source = "vcs"
[tool.hatch.version.raw-options]
root = ".."
local_scheme = "no-local-version"
[tool.hatch.build.hooks.vcs]
version-file = "sx/check/_version.py"

[tool.coverage.run]
omit = [
    "**/__init__.py",
    "**/_version.py"
]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = '''
--import-mode=importlib -ra
-vvv
--cov=sx
'''
pythonpath = [
    "."
]
testpaths = [
    "tests",
]

[tool.black]
line-length = 83
target-version = ["py38", "py39", "py310"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
atomic = true
line_length = 83
float_to_top = true
skip_glob = "**/__init__.py"

[tool.ruff]
ignore = []
line-length = 88
select = ["E","F","W"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]